--- a/package.json
+++ b/package.json
@@ -15,46 +15,46 @@
     "dev": "concurrently \"pnpm run server\" \"pnpm run vite:dev\""
   },
   "devDependencies": {
-    "@clerk/types": "^3.62.0",
-    "@cloudflare/workers-types": "^4.20240404.0",
-    "@sveltejs/vite-plugin-svelte": "^3.0.1",
-    "@tsconfig/svelte": "^5.0.2",
+    "@clerk/types": "^3.65.4",
+    "@cloudflare/workers-types": "^4.20241218.0",
+    "@sveltejs/vite-plugin-svelte": "^3.1.2",
+    "@tsconfig/svelte": "^5.0.4",
     "@types/cors": "^2.8.17",
-    "autoprefixer": "^10.4.17",
+    "autoprefixer": "^10.4.20",
     "concurrently": "^8.2.2",
-    "drizzle-kit": "^0.20.14",
-    "postcss": "^8.4.33",
-    "prettier": "^3.2.4",
-    "prettier-plugin-svelte": "^3.1.2",
-    "svelte": "^4.2.8",
-    "svelte-check": "^3.6.2",
-    "tailwindcss": "^3.4.1",
-    "tslib": "^2.6.2",
-    "tsx": "^4.7.1",
-    "typescript": "^5.2.2",
-    "vite": ">=5.0.13"
+    "drizzle-kit": "^0.20.18",
+    "postcss": "^8.4.49",
+    "prettier": "^3.4.2",
+    "prettier-plugin-svelte": "^3.3.2",
+    "svelte": "^4.2.19",
+    "svelte-check": "4.1.1",
+    "tailwindcss": "3.4.17",
+    "tslib": "^2.8.1",
+    "tsx": "^4.19.2",
+    "typescript": "^5.7.2",
+    "vite": "5.4.11"
   },
   "dependencies": {
-    "@clerk/clerk-js": "^4.70.0",
-    "@libsql/client": "^0.5.6",
-    "@tailwindcss/typography": "^0.5.10",
+    "@clerk/clerk-js": "^4.73.11",
+    "@libsql/client": "0.14.0",
     "@trpc/client": "11.0.0-rc.329",
+    "@tailwindcss/typography": "^0.5.10",
     "@trpc/server": "11.0.0-next.327",
-    "@tsndr/cloudflare-worker-jwt": "^2.5.3",
+    "@tsndr/cloudflare-worker-jwt": "^2.5.4",
     "cors": "^2.8.5",
-    "daisyui": "^4.6.0",
-    "dayjs": "^1.11.10",
-    "debounce": "^2.0.0",
+    "daisyui": "^4.12.22",
+    "dayjs": "^1.11.13",
+    "debounce": "^2.2.0",
     "decimal.js": "^10.4.3",
-    "dotenv": "^16.4.5",
-    "drizzle-orm": "^0.30.5",
+    "dotenv": "^16.4.7",
+    "drizzle-orm": "^0.30.10",
     "drizzle-zod": "^0.5.1",
     "fetch": "link:@trpc/server/adapters/fetch",
     "lucide-svelte": "^0.317.0",
-    "nanoid": "^5.0.6",
+    "nanoid": "^5.0.9",
     "standalone": "link:@trpc/server/adapters/standalone",
-    "superjson": "^2.2.1",
+    "superjson": "^2.2.2",
     "svelte-navigator": "^3.2.2",
-    "zod": "^3.22.4"
+    "zod": "^3.24.1"
   }
 }
